# monocle

./: .env  .gitignore  .pylintrc  CHANGELOG.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.template  GOVERNANCE.md  MAINTAINER.md  Monocle_User_Guide.md  Monocle_committer_guide.md  Monocle_contributor_guide.md  Monocle_supported_patterns.md  NOTICE  README.md  README_CUSTOM_SCOPES.md  RELEASE.md  Release_Branch_Guide.md  SECURITY.md  ai_inference.py  eachdist.ini  openai_sample.py  pyproject.toml  requirements.txt  run_parallel_tests.sh  test_ollama_simple_minimal.py  test_xai_integration.py  tox.ini  xai_monocle_example.py
apptrace/: CLAUDE_HOOK_SETUP.md  HOOK_SETUP.md  README.md  pyproject.toml  test_claude_hook.sh
apptrace/examples/: README.md  list_okahu_apps.py
apptrace/src/: README.md
apptrace/src/monocle_apptrace/: __init__.py  __main__.py  cli.py  session_token_summary.py  token_summary.py
apptrace/tests/: MONOCLE_TESTING.md  conftest.py  langchain_starter.md
apptrace/tests/common/: aiohttp_helper.py  chain_exec.py  custom_exporter.py  dummy_class.py  embeddings_wrapper.py  fastapi_helper.py  fastmcp_server.py  flask_helper.py  helpers.py  http_span_exporter.py  langhchain_patch.py  mock_span_exporter.py  msagent_server.py  span_filter_test_exporter.py  stream_helpers.py
apptrace/tests/config/: conftest.py
apptrace/tests/custom_litellm/: llm.py  prompt_loader.py
apptrace/tests/data/: trace_test.json  trace_test_invalid.json
apptrace/tests/integration/: __init__.py  coffee.txt  conftest.py  monocle_scopes.json  test_adk_commerce.py  test_adk_inference_decision.py  test_adk_multi_agent.json  test_adk_multi_agent.py  test_adk_single_agent.py  test_agent_core_client_app.py  test_aiohttp_tracid_propogation.py  test_aiohttp_tracid_propogation.py.wip  test_anthropic_finish_reason_integration.py  test_anthropic_sdk_sample.py  test_anthropic_streaming.py  test_aws_genai_idp_retrieve_and_generate.json  test_azure_ai_inference_finish_reason_integration.json  test_azure_ai_inference_finish_reason_integration.py  test_azure_ai_inference_otlp.py  test_azure_ai_inference_sample.py  test_azure_ai_streaming_scenarios.py  test_azure_openai_finish_reason_integratio.json  test_azure_openai_finish_reason_integration.py  test_bedrock_agentcore.py  test_bedrock_finish_reason_integratio.json  test_bedrock_finish_reason_integration.py  test_bedrock_opensearch.py  test_boto_coverage_api.json  test_boto_coverage_api.py  test_cloud_trace_validation.py  test_crewai_multi_agent.json  test_crewai_multi_agent.py  test_crewai_multi_agent_stream.py  test_crewai_single_agent.json  test_crewai_single_agent.py  test_custom_span_io.py  test_deepseek_sample.py  test_fastapi_tracid_propogation.py  test_fastmcp_sample.py  test_flask_tracid_propogation.py  (+101 more)
apptrace/tests/unit/: app_hosting_types_test.py  async_unit_test.py  base_unit.py  exporter_config_test.py  file_exporter_test.py  flask_instrumented_app_test.py  haystack_metamodel_unittest.py  langchain_async_processor_test.py  langchain_async_test.py  langchain_custom_output_processor_test.py  langchain_kwargs_test.py  langchain_workflow_name_test.py  llama_index_test.py  output_processor_test.py  s3_filename_test.py  test_agent_edit_context.py  test_aiohttp_trace_return.py  test_app_hosting_types.py  test_async_context_fix.py  test_async_unit.py  test_azfunc_trace_return.py  test_azureaiinference_finish_reason_helpers.py  test_bedrock_botocore_helper.py  test_bedrock_finish_reason_mapping.py  test_blob_filename.py  test_cli_validate_command.py  test_crewai_async_task_context.py  test_crewai_tool_session_input.py  test_custom_instrumentation.py  test_exporter_config.py  test_fastapi_helper.py  test_fastapi_trace_return_send.py  test_feedback_helpers.py  test_file_exporter.py  test_file_exporter_idle_timeout.py  test_file_prefix_env.py  test_flask_trace_return.py  test_gcs_exporter.py  test_gemini_finish_reason_helpers.py  test_genai_semantic_conventions.py  (+55 more)
mcp/: README.md  pyproject.toml
mcp/src/monocle_mcp/: mcp_server.py
test_tools/: README.md  generate_jenkins_trace.py  pyproject.toml  sample_jenkins_trace.json
test_tools/examples/: cases.example.csv  csv_cases_example.py  example_usage.py  generic_span_assertions_example.py
test_tools/src/monocle_test_tools/: __init__.py  __main__.py  constants.py  csv_cases.py  download_models.py  eval_matrix.py  file_span_loader.py  fluent_api.py  generate_test.py  gitutils.py  okahu_span_loader.py  pytest_plugin.py  schema.py  span_loader.py  test_generator.py  trace_utils.py  utils.py  validator.py
test_tools/tests/: test_basic.py
test_tools/tests/integration/: __init__.py  adk_travel_agent.py  conftest.py  test_adk_custom_assertions.py  test_adk_travel_agent.py  test_adk_travel_agent_fluent.py  test_crewai_simple_agent.py  test_crewai_travel_agent.py  test_crewai_travel_agent_fluent.py  test_csv_cases_okahu.py  test_custom_evals.py  test_evals.py  test_filtered_custom_eval_live.py  test_http_trace_return.py  test_http_trace_return_frameworks.py  test_json_trace_assertions.py  test_llamaindex_travel_agent.py  test_mock_tools_fluent.py  test_multi_turn_runner.py  test_non_llm_evals.py  test_okahu_span_load.py  test_okahu_trace_assertions.py  test_performance.py  test_remote_agent.py  test_strands_travel_agent.py  test_test_generator.py  test_tool_mock.py
test_tools/tests/test_common/: adk_travel_agent.py  adk_travel_agent_litellm_openai.py  crewai_travel_agent.py  fastapi_helper.py  llamaindex_travel_agent.py  okahu_api.py  strands_travel_agent.py  weather_mcp_server.py
test_tools/tests/unit/: conftest.py  span_loader.py  test_aggregate_assertions.py  test_check_eval_filtered.py  test_check_eval_template_path.py  test_cli_dispatch.py  test_csv_cases.py  test_eval_matrix.py  test_file_load_span.py  test_fluent_apis.py  test_gitutils.py  (+17 more)
tfwk/: ENHANCED_TESTING_GUIDE.md  README.md  pyproject.toml
tfwk/docs/: ENHANCED_TESTING_GUIDE.md  ENTIRE_FLOW_PATTERN_CHAINING.md  HTTP_PLUGIN_SUMMARY.md  UNIFIED_FLOW_VALIDATION_API.md  competition.md
tfwk/tests/: __init__.py
(+829 files in other folders)
