[build-system]
requires = ["hatchling","hatch-build-scripts"]
build-backend = "hatchling.build"

[[tool.hatch.build.hooks.build-scripts.scripts]]
commands = [
    "echo 'Running a pre-build step..copying license'",
    "if [ -f \"LICENSE\" ]; then echo \"✅ LICENSE already exists\"; elif [ -f \"../LICENSE\" ]; then cp \"../LICENSE\" \"LICENSE\" && echo \"✅ LICENSE copied from parent\"; else echo \"❌ ERROR: LICENSE not found\" && exit 1; fi"
]

[project]
name = "monocle_mcp"
version = "0.6.0"
description = "Monocle MCP server: prompts and tools for enabling and analyzing Monocle tracing in GenAI apps."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Okahu Inc.", email = "okahu-pypi@okahu.ai" }
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.0.0",
    "monocle_apptrace>=0.5.0",
    "mcp>=1.12.1",
]

[project.scripts]
monocle_mcp = "monocle_mcp.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/monocle_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "src/monocle_mcp/**/*.py",
]
